# emotion-speech-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  convert_with_docker.sh  data.dvc  model.onnx.dvc  model_checkpoints.dvc  prepare_dataset.py  pyproject.toml  register_model.py  test_serving.py
conf/: config.yaml
conf/callbacks/: callbacks.yaml
conf/inference/: inference.yaml
conf/logger/: mlflow.yaml
conf/module/: module.yaml
conf/prepare_data/: prepare_data.yaml
conf/trainer/: trainer.yaml
emotion_speech_recognition/: audio_classifier.py  datamodule.py  export_to_onnx.py  inference.py  inference_client.py  inference_server.py  model.py  modern_audio_features.py  prepare_dataset.py  train.py
trt_converter/: Dockerfile
